# app/admin/api/internal/types/types.go
@@ -1,102 +1,0 @@
-// Code generated by goctl. DO NOT EDIT.
-package types
-
-type DemoError_Request struct {
-	SystemStatusCode int    `json:"system_status_code"`
-	HTTPStatusCode   int    `json:"http_status_code"`
-	Message          string `json:"message"`
-}
-
-type DemoError_Response struct {
-}
-
-type Manager_Public_GetSignUpCaptcha_Request struct {
-}
-
-type Manager_Public_GetSignUpCaptcha_Response struct {
-}
-
-type Manager_Public_CheckSignUpCaptcha_Request struct {
-}
-
-type Manager_Public_CheckSignUpCaptcha_Response struct {
-}
-
-type Manager_Public_SignUpAccount_Request struct {
-	Account     string  `json:"account"`      // 账号
-	Password    string  `json:"password"`     // 密码（前端加密后提交）
-	CaptchaCode *string `json:"captcha_code"` // 图形验证码
-}
-
-type Manager_Public_SignUpAccount_Response struct {
-	Token string `json:"token"`
-}
-
-type Manager_Public_GetSignInCaptcha_Request struct {
-}
-
-type Manager_Public_GetSignInCaptcha_Response struct {
-}
-
-type Manager_Public_CheckSignInCaptcha_Request struct {
-}
-
-type Manager_Public_CheckSignInCaptcha_Response struct {
-}
-
-type Manager_Public_SignInAccount_Request struct {
-	Account     string  `json:"account"`      // 账号
-	Password    string  `json:"password"`     // 密码（前端加密后提交）
-	CaptchaCode *string `json:"captcha_code"` // 图形验证码
-}
-
-type Manager_Public_SignInAccount_Response struct {
-	Token string `json:"token"`
-}
-
-type Manager_Admin_SignOut_Request struct {
-}
-
-type Manager_Admin_SignOut_Response struct {
-}
-
-type Manager_Admin_EditPassword_Request struct {
-	OriginalPassword string `json:"original_password"` // 原始密码（前端加密后提交）
-	NewPassword      string `json:"new_password"`      // 新的密码（前端加密后提交）
-}
-
-type Manager_Admin_EditPassword_Response struct {
-}
-
-type Manager_Admin_GetAdminList_Request struct {
-	Page              *int    `form:"page,optional"`                // 当前页码
-	PerPage           *int    `form:"per_page,optional"`            // 每页条目
-	OrderColumn       *string `form:"order_column,optional"`        // 排序字段
-	OrderType         *string `form:"order_type,optional"`          // 排序类型，asc、desc
-	SearchAccountLike *string `form:"search_account_like,optional"` // 账号
-}
-
-type Manager_Admin_GetAdminList_Response struct {
-	Total int64                                      `json:"total"`
-	Items []Manager_Admin_GetAdminList_Response_Item `json:"items"`
-}
-
-type Manager_Admin_GetAdminList_Response_Item struct {
-	ID                  uint64 `json:"id"`             // 管理员 ID
-	Name                string `json:"name"`           // 名称
-	Account             string `json:"account"`        // 账号
-	CreatedTimestamp    int64  `json:"created_at"`     // 创建时间
-	LastSigninTimestamp int64  `json:"last_signin_at"` // 上次登录时间
-}
-
-type Manager_Admin_GetAdminInfo_Request struct {
-	ID uint64 `path:"id"` // 管理员 ID
-}
-
-type Manager_Admin_GetAdminInfo_Response struct {
-	ID                  uint64 `json:"id"`             // 管理员 ID
-	Name                string `json:"name"`           // 名称
-	Account             string `json:"account"`        // 账号
-	CreatedTimestamp    int64  `json:"created_at"`     // 创建时间
-	LastSigninTimestamp int64  `json:"last_signin_at"` // 上次登录时间
-}
