# app/user/api/doc/swagger.json
@@ -394,10 +394,49 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/AdminSelfGetUserListResponse"
+              "$ref": "#/definitions/Manager_Admin_GetUserList_Response"
             }
           }
         },
+        "parameters": [
+          {
+            "name": "page",
+            "description": " 当前页码",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "per_page",
+            "description": " 每页条目",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "order_column",
+            "description": " 排序字段",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "order_type",
+            "description": " 排序类型，asc、desc",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "search_account_like",
+            "description": " 账号",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
         "tags": [
           "manager/admin"
         ],
@@ -416,7 +455,7 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/Response"
+              "$ref": "#/definitions/Manager_Admin_GetUserInfo_Response"
             }
           }
         },
@@ -440,61 +479,6 @@
     }
   },
   "definitions": {
-    "AdminSelfGetUserListItem": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "integer",
-          "format": "int32"
-        },
-        "name": {
-          "type": "string"
-        },
-        "account": {
-          "type": "string"
-        },
-        "password": {
-          "type": "string"
-        },
-        "last_signin_at": {
-          "type": "integer",
-          "format": "int32"
-        },
-        "created_at": {
-          "type": "integer",
-          "format": "int32"
-        },
-        "updated_at": {
-          "type": "integer",
-          "format": "int32"
-        }
-      },
-      "title": "AdminSelfGetUserListItem",
-      "required": [
-        "id",
-        "name",
-        "account",
-        "password",
-        "last_signin_at",
-        "created_at",
-        "updated_at"
-      ]
-    },
-    "AdminSelfGetUserListResponse": {
-      "type": "object",
-      "properties": {
-        "list": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/AdminSelfGetUserListItem"
-          }
-        }
-      },
-      "title": "AdminSelfGetUserListResponse",
-      "required": [
-        "list"
-      ]
-    },
     "Client_Public_CheckSignInCaptcha_Request": {
       "type": "object",
       "title": "Client_Public_CheckSignInCaptcha_Request"
@@ -543,7 +527,12 @@
           "description": " 图形验证码"
         }
       },
-      "title": "Client_Public_SendSignInSMS_Request"
+      "title": "Client_Public_SendSignInSMS_Request",
+      "required": [
+        "country_code",
+        "mobile",
+        "captcha_code"
+      ]
     },
     "Client_Public_SendSignInSMS_Response": {
       "type": "object",
@@ -557,7 +546,11 @@
           "description": " 输入错误剩余重试次数"
         }
       },
-      "title": "Client_Public_SendSignInSMS_Response"
+      "title": "Client_Public_SendSignInSMS_Response",
+      "required": [
+        "exp_timestamp",
+        "remaining_retries"
+      ]
     },
     "Client_Public_SendSignUpSMS_Request": {
       "type": "object",
@@ -575,7 +568,12 @@
           "description": " 图形验证码"
         }
       },
-      "title": "Client_Public_SendSignUpSMS_Request"
+      "title": "Client_Public_SendSignUpSMS_Request",
+      "required": [
+        "country_code",
+        "mobile",
+        "captcha_code"
+      ]
     },
     "Client_Public_SendSignUpSMS_Response": {
       "type": "object",
@@ -589,7 +587,11 @@
           "description": " 输入错误剩余重试次数"
         }
       },
-      "title": "Client_Public_SendSignUpSMS_Response"
+      "title": "Client_Public_SendSignUpSMS_Response",
+      "required": [
+        "exp_timestamp",
+        "remaining_retries"
+      ]
     },
     "Client_Public_SignInAccount_Request": {
       "type": "object",
@@ -787,7 +789,47 @@
       "type": "object",
       "title": "DemoError_Response"
     },
-    "GetList_Request": {
+    "Manager_Admin_GetUserInfo_Request": {
+      "type": "object",
+      "title": "Manager_Admin_GetUserInfo_Request"
+    },
+    "Manager_Admin_GetUserInfo_Response": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64",
+          "description": " 用户 ID"
+        },
+        "name": {
+          "type": "string",
+          "description": " 名称"
+        },
+        "account": {
+          "type": "string",
+          "description": " 账号"
+        },
+        "created_at": {
+          "type": "integer",
+          "format": "int64",
+          "description": " 创建时间"
+        },
+        "last_signin_at": {
+          "type": "integer",
+          "format": "int64",
+          "description": " 上次登录时间"
+        }
+      },
+      "title": "Manager_Admin_GetUserInfo_Response",
+      "required": [
+        "id",
+        "name",
+        "account",
+        "created_at",
+        "last_signin_at"
+      ]
+    },
+    "Manager_Admin_GetUserList_Request": {
       "type": "object",
       "properties": {
         "page": {
@@ -807,57 +849,68 @@
         "order_type": {
           "type": "string",
           "description": " 排序类型，asc、desc"
+        },
+        "search_account_like": {
+          "type": "string",
+          "description": " 账号"
         }
       },
-      "title": "GetList_Request"
+      "title": "Manager_Admin_GetUserList_Request"
     },
-    "Request": {
-      "type": "object",
-      "title": "Request"
-    },
-    "Response": {
-      "type": "object",
-      "title": "Response"
-    },
-    "SendSMS_Request": {
+    "Manager_Admin_GetUserList_Response": {
       "type": "object",
       "properties": {
-        "country_code": {
-          "type": "string",
-          "description": " 国际区号"
+        "total": {
+          "type": "integer",
+          "format": "int64"
         },
-        "mobile": {
-          "type": "string",
-          "description": " 手机号码"
-        },
-        "captcha_code": {
-          "type": "string",
-          "description": " 图形验证码"
+        "items": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/Manager_Admin_GetUserList_Response_Item"
+          }
         }
       },
-      "title": "SendSMS_Request",
+      "title": "Manager_Admin_GetUserList_Response",
       "required": [
-        "country_code",
-        "mobile",
-        "captcha_code"
+        "total",
+        "items"
       ]
     },
-    "SendSMS_Response": {
+    "Manager_Admin_GetUserList_Response_Item": {
       "type": "object",
       "properties": {
-        "exp_timestamp": {
-          "type": "string",
-          "description": " 短信验证码有效期时间戳"
+        "id": {
+          "type": "integer",
+          "format": "int64",
+          "description": " 用户 ID"
         },
-        "remaining_retries": {
+        "name": {
           "type": "string",
-          "description": " 输入错误剩余重试次数"
+          "description": " 名称"
+        },
+        "account": {
+          "type": "string",
+          "description": " 账号"
+        },
+        "created_at": {
+          "type": "integer",
+          "format": "int64",
+          "description": " 创建时间"
+        },
+        "last_signin_at": {
+          "type": "integer",
+          "format": "int64",
+          "description": " 上次登录时间"
         }
       },
-      "title": "SendSMS_Response",
+      "title": "Manager_Admin_GetUserList_Response_Item",
       "required": [
-        "exp_timestamp",
-        "remaining_retries"
+        "id",
+        "name",
+        "account",
+        "created_at",
+        "last_signin_at"
       ]
     }
   },
